--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "emoji-mart": "^3.0.0",
     "firebase": "^8.1.2",
     "md5": "^2.3.0",
     "mime-types": "^2.1.27",
